# surfai

./: Cargo.toml  LICENSE  README.md
examples/: dynamic_monitoring_demo.rs  google_search_demo.rs  simple_test.rs
examples/helpers/: mod.rs
src/: browser.rs  dom.rs  errors.rs  lib.rs  main.rs  testing.rs  types.rs
src/actions/: base.rs  mod.rs  registry.rs
src/browser/: chrome.rs  element_monitor.rs  mod.rs  navigation.rs  session.rs
src/core/: browser.rs  config.rs  dom.rs  mod.rs  session.rs
src/dom/: element.rs  mod.rs  processor.rs  state.rs
src/errors/: mod.rs  types.rs
src/utils/: javascript.rs  mod.rs  screenshot.rs
