[package]
name = "browser-ragent"
version = "0.1.0"
edition = "2024"

[dependencies]

tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }
headless_chrome = "1.0"
scraper = "0.18"
regex = "1.10"
url = "2.5"
tracing = "0.1"
tracing-subscriber = "0.3"
base64 = "0.21"


[dev-dependencies]
tokio-test = "0.4"
